AICT webpage kids_pattern final (Configuring error correction and error notification caused by lack of data)

--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -127,7 +127,8 @@
                     <label for="exampleInputcheck" style="font-size:15px;">생년월일 </label>
                     <input name="password" type="date" class="form-control"  min="2016-01-01" max="2022-01-01" value="2020-01-01" style="height:45px;width:120;font-size:15px;">
                 </div><br><br><br>
-                <button type="submit" class="btn btn-primary" style="height:45px;width:120;font-size:16px;">확 인</button><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <center>
+                    <button type="submit" class="btn btn-primary" style="height:50px;width:120;font-size:16px;background-color: #93b3b7;">확 인</button></center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </form>
           <form action="{% url 'kids_data_fileupload'%}" method="POST">
               {% csrf_token %}
