--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -124,7 +124,7 @@
                             <input type="radio" name="day[]" value="month" />
                         </div>
                         <div style="float: left; margin-light:20px; "><br><br>
-                            <button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
+                            &nbsp;&nbsp;<button type="submit" class="btn btn-primary" style="border-top-left-radius:5px; border-bottom-left-radius:5px; border: 1px solid black; background-color: rgba(0,0,0,0); color: black; padding: 5px;">확인</button>
                             <br><br>
                         </div>
                     </div>
