AICT webpage kids_pattern final (Configuring error correction and error notification caused by lack of data)

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -87,7 +87,7 @@
     <div class="container ">
         <div style="float: center;">
             {% if not_exist %}
-            <h2 style="font-family: 'Jua', sans-serif; ">잘못된 정보입니다. 다시 확인해주세요.</h2>
+            <h2 style="font-family: 'Jua', sans-serif; ">⚠️ 잘못된 정보입니다. 다시 확인해주세요.  ⚠️ </h2>
             <h4><a href="{% url 'kids_pattern1'%}" ><img src="{% static 'smartfarm_page/assets/img/return.png' %}" width="40" height="40" alt=""></a></h4>
             <br><br><br>
             {% else %}
