AICT webpage kids_pattern final (abnormal symptom prediction)

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -219,7 +219,8 @@
                             <div class="card shadow mb-4"style="border:0px;">
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
+                                        <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다.</h2>
+                                        <h2 style="color:#FFA07A;font-family: 'Jua', sans-serif;font-weight:500;"><br>{{ zsc }}</h2>
                                     </div>
                                 </div>
                             </div>
@@ -243,6 +244,7 @@
                                 <div class="card-body">
                                     <div class="chart-area">
                                         <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
+                                        <h2 style="color:#FFA07A;font-family: 'Jua', sans-serif;font-weight:500;"><br>{{ zsc }}</h2>
                                     </div>
                                 </div>
                             </div>
@@ -266,6 +268,7 @@
                                 <div class="card-body">
                                     <div class="chart-area">
                                         <h2 style="font-family: 'Jua', sans-serif;font-weight:500;"><br><br><br>{{ name }}의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
+                                        <h2 style="color:#FFA07A;font-family: 'Jua', sans-serif;font-weight:500;"><br>{{ zsc }}</h2>
                                     </div>
                                 </div>
                             </div>
@@ -289,6 +292,7 @@
                                 <div class="card-body">
                                     <div class="chart-area">
                                         <h2 style="font-family: 'Jua', sans-serif; font-weight:500;"><br><br><br>{{ name }} 어린이의 하루평균 심박수는 {{heartrate}}bp,<br> 하루 한시간평균 걸음수는 {{stepcount}}입니다.<br>비교적으로 {{ max_zsc }}에 활동량이 많으며 <br> {{ min_zsc }}에 활동량이 낮습니다. </h2>
+                                        <h2 style="color:#FFA07A;font-family: 'Jua', sans-serif;font-weight:500;"><br>{{ zsc }}</h2>
                                     </div>
                                 </div>
                             </div>
