--- a/smartfarm_page/templates/kids_data_fileupload.html
+++ b/smartfarm_page/templates/kids_data_fileupload.html
@@ -37,7 +37,7 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="page">
+<body class="page" style="background-color:#F3F6F6; height: 300px;">
 <!-- Navigation
     ==========================================-->
 <nav id="top-menu" class="navbar navbar-default navbar-fixed-top">
