--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -38,7 +38,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -78,7 +80,14 @@
    background-color: white;
    text-align: left;
    border: 2px solid #000000;
-         }
+   }
+   table {
+      width: 80%;
+      text-align: center;
+   }
+   table, th, td,tr {
+      border: 0.5px solid #bcbcbc;
+   }
 </style>
 <!-- banner Page
     ==========================================-->
@@ -135,7 +144,51 @@
   </div>
 </div>
 <!--page body-->
-
+{% if N_pick_type == 'N' %}
+<div class="container">
+    <div class="row"><br><br>
+        <div class="jb-text"style=" padding: 30px 20px;">
+            <h2 style=" text-align: center; font-family: 'Do Hyeon', sans-serif; font-size:40px"><img src="{% static 'smartfarm_page/assets/img/search.png' %}" width="50" height="45" alt=""> 아이의 데이터를 확인하려면 데이터 유형을 선택하세요. <img src="{% static 'smartfarm_page/assets/img/search.png' %}" width="45" height="45" alt=""></h2>
+            <br><br><br><br>
+            <center>
+            <table>
+                <caption style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:35px;"><img src="{% static 'smartfarm_page/assets/img/kindergarten.png' %}" width="50" height="45" alt="">  {{ a.values.get.어린이집 }}  <img src="{% static 'smartfarm_page/assets/img/kindergarten.png' %}" width="50" height="45" alt=""></caption>
+                <thead>
+                <tr>
+                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:30px;">{{ a.values.get.반 }}</td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th colspan="2"style="border: 0.5px ;text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">성별</th>
+                    <th colspan="2" style="text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">성향</th>
+                </tr>
+                <tr>
+                    <th style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">여자</th>
+                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">남자</th>
+                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">외향적</th>
+                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">내향적</th>
+                </tr>
+                <tr>
+                    <td style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classg}}</td>
+                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classb}}</td>
+                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classe}}</td>
+                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classi}}</td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">총 : {{classall}}</td>
+                </tr>
+                </tfoot>
+            </table>
+            </center>
+            <br><br><br><br>
+            <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/report2.png' %}" width="500" height="450" alt=""></h2>
+        </div>
+    </div>
+</div>
+{% elif N_pick_type == 'Y' %}
 <div class="container">
     <div class="row">
         <h3 style="color:#ebbf7a; font-size: 35px; font-weight: 600;font-family: 'Jua', sans-serif;">{{ pick }}</h3>
@@ -416,7 +469,7 @@
                     </div>
                 </div>
            {% endif %}
-
+                {% endif %}
 {% endif %}
 
                 <br><br><br><br><br>
