--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -155,30 +155,30 @@
                 <caption style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:35px;"><img src="{% static 'smartfarm_page/assets/img/kindergarten.png' %}" width="50" height="45" alt="">  {{ a.values.get.어린이집 }}  <img src="{% static 'smartfarm_page/assets/img/kindergarten.png' %}" width="50" height="45" alt=""></caption>
                 <thead>
                 <tr>
-                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:30px;">{{ a.values.get.반 }}</td>
+                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:30px;">{{ a.values.get.반 }}</td>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <th colspan="2"style="border: 0.5px ;text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">성별</th>
-                    <th colspan="2" style="text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">성향</th>
+                    <th colspan="2"style="border: 0.5px ;text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">성별</th>
+                    <th colspan="2" style="text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">성향</th>
                 </tr>
                 <tr>
-                    <th style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">여자</th>
-                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">남자</th>
-                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">외향적</th>
-                    <th style=" text-align: center;font-family: 'Jua', sans-serif; font-size:20px;">내향적</th>
+                    <th style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">여자</th>
+                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">남자</th>
+                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">외향적</th>
+                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">내향적</th>
                 </tr>
                 <tr>
-                    <td style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classg}}</td>
-                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classb}}</td>
-                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classe}}</td>
-                    <td style=" text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">{{classi}}</td>
+                    <td style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">{{classg}}</td>
+                    <td style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">{{classb}}</td>
+                    <td style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">{{classe}}</td>
+                    <td style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">{{classi}}</td>
                 </tr>
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Jua', sans-serif; font-size:25px;">총 : {{classall}}</td>
+                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">총 : {{classall}}</td>
                 </tr>
                 </tfoot>
             </table>
