AICT webpage kids_pattern final (default page)

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -161,13 +161,13 @@
                 <tbody>
                 <tr>
                     <th colspan="2"style="border: 0.5px ;text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">성별</th>
-                    <th colspan="2" style="text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">성향</th>
+                    <th colspan="2"style="text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">성향</th>
                 </tr>
                 <tr>
                     <th style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">여자</th>
                     <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">남자</th>
-                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">외향적</th>
-                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">내향적</th>
+                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">외향</th>
+                    <th style=" text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:20px;">내향</th>
                 </tr>
                 <tr>
                     <td style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">{{classg}}</td>
@@ -178,7 +178,7 @@
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">총 : {{classall}}</td>
+                    <td colspan="4" style="border: 0.5px ; text-align: center;font-family: 'Do Hyeon', sans-serif; font-size:25px;">총 : {{classall}} 명</td>
                 </tr>
                 </tfoot>
             </table>
