Add a map to the kids_result default page(Naver API)

--- a/smartfarm_page/templates/kids_data_fileupload.html
+++ b/smartfarm_page/templates/kids_data_fileupload.html
@@ -118,8 +118,12 @@
                     </center>
                     </div><br>
                     {% endif %}
-
-
+                </div>
+            </form>
+        </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
