--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -184,6 +184,7 @@
                 </tr>
                 </tfoot>
             </table><br><br><br><br>
+                <!-- 네이버 지도 (예닮어린이집 위.경도로 설정해둠. -->
                 <div class="flex-container"; style=" padding:0px 0px;">
                     <div class="container px-xl-6 bg-light">
                         <div class="col-sm-6">
@@ -544,6 +545,7 @@
         </div>
     </div><br><br>
 </footer>
+<!-- 네이버 지도 (예닮어린이집 위.경도로 설정해둠. -->
 <script>
         var mapOptions = {
             center: new naver.maps.LatLng(37.284465303136194, 127.03091474890738),
