--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -128,14 +128,15 @@
                     <input name="password" type="date" class="form-control"  min="2016-01-01" max="2022-01-01" value="2020-01-01" style="height:45px;width:120;font-size:15px;">
                 </div><br><br><br>
                 <center>
-                    <button type="submit" class="btn btn-primary" style="height:50px;width:120;font-size:16px;background-color: #93b3b7;">확 인</button></center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <button type="submit" class="btn btn-primary" style="height:50px;width:120;font-size:16px;background-color: #93b3b7;">확 인</button></center>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br>
             </form>
           <form action="{% url 'kids_data_fileupload'%}" method="POST">
               {% csrf_token %}
               <div class="form-group">
                   <label for="exampleInputName" style="font-size:15px;">업로드 사용자 비밀번호</label>
                   <input  name="data_pass" type="password" class="form-control" id="exampleInput" placeholder="password" style="height:45px;font-size:15px;" required>
-              </div><br><br>
+              </div><br><br><br>
           </form>
 
       <!--blog posts container-->
