Add a map to the kids_result default page(Naver API)

--- a/smartfarm_page/templates/kids_result.html
+++ b/smartfarm_page/templates/kids_result.html
@@ -215,8 +215,10 @@
                             </div>
                         </div>
                     </div>
-                </div><br><br>
+                </div><br><br><br>
+                <!-- report 사진
             <h2 style=" text-align: center;font-family: 'Jua', sans-serif ;"><img src="{% static 'smartfarm_page/assets/img/report2.png' %}" width="500" height="450" alt=""></h2><br><br>
+             -->
         </center>
         </div>
     </div>
