Data on changes in daycare centers in 2022 were added.

--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -103,13 +103,13 @@
                     <label for="exampleInputcheck" style="font-size:15px;">반</label>
                     <select name="class" class="form-control" id="exampleInputcheck2" placeholder="반" style="height:45px;font-size:15px;">
                         <optgroup label="예닮어린이집">
-                            <option value="행복한아라반">아라반</option>
                             <option value="행복한하나반">하나반</option>
                             <option value="행복한나래반">나래반</option>
                             <option value="행복한아토반">아토반</option>
                             <option value="행복한마루반">마루반</option>
                             <option value="행복한누리반">누리반</option>
                             <option value="행복한샛별반">샛별반</option>
+                            <option value="행복한솔찬반">솔찬반</option>
                         </optgroup>
                         <optgroup label="평택어린이집">
                             <option value="독수리반" >독수리반</option>
